@@ -2,6 +2,12 @@
 Top of SVN tree:
 ------------------------------------------------------------------------------
 
+gtk-v2/src/info.c:  Support autoload of Message Control dialog settings by
+  reading the configuration file in msgctrl_init().
+gtk-v2/src/main.c:  Move msgctrl_init() later in client start up so that auto-
+  load of Message Control dialog settings does not segfault.
+Kevin Bulgrien 2009/09/02
+
 gtk-v2/src/info.c:  The Message Control dialog Load button is now functional.
   Changed some of the struct definitions to be compatible with use to allocate
   a buffer in load_msgctrl_configuration() by making them typedefs and then by
